kube-manifests/kubernetes/grafana-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: grafana-nodeport
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30880
    port: 30880
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
