kube-manifests/kubernetes/prometheus-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: prometheus-nodeport
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30900
    port: 30900
    protocol: TCP
    targetPort: 9090
  selector:
    app: kube-prometheus-stack-prometheus
