kube-manifests/kubernetes/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /grafana/
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
